# portfolio-tracker

./: pyproject.toml
domain/: model.py  money.py  transactions.py
src/portfolio_app/: dev_console.py
src/portfolio_app/adapters/: repos_memory.py  uow_memory.py
src/portfolio_app/application/: commands.py  handlers.py
src/portfolio_app/domain/: errors.py  events.py  ids.py  model.py  money.py  portfolio.py  positions.py  transactions.py
src/portfolio_app/entrypoints/: cli.py
src/portfolio_app/ports/: clock.py  pricing.py  repos.py  uow.py
tests/: helpers.py  test_events.py  test_memory_repo.py  test_portfolio_core.py
