[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.7.0",
    "mypy>=1.18.2",
]

# CLI entrypoint: uv exposes this via `uv run pt ...`
[project.scripts]
pt = "portfolio_tracker.entrypoints.cli:app"



[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"] # isort
fix = true

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=portfolio_tracker --cov-report=term-missing"



dependencies = [
    "alembic>=1.16.5",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

